<resources>
    <string name="base_url">https://oob-carteira-digital-website.vercel.app</string>
    <string name="app_name">Carteira Digital</string>
    <string name="login_title">Carteira Digital</string>
    <string name="login_cpf">CPF</string>
    <string name="login_password">Senha</string>
    <string name="login_submit">Entrar</string>
    <string name="login_forgot_password">Esqueci a senha</string>
    <string name="card_title">Carteirinha digital</string>
    <string name="messages_title">Recados</string>
    <string name="messages_mark_all_read">Marcar todas como lidas</string>
    <string name="home_new_card">Nova Carteirinha</string>
    <string name="home_messages">Recados</string>
    <string name="home_card">Carteirinha</string>
    <string name="home_qr_code">Qr Code</string>
    <string name="new_card_title">Novo Cartão Físico</string>
    <string name="new_card_reason_hint">Motivo...</string>
    <string name="new_card_comments">( Atualizações serão notificadas por e-mail e pelo nosso app através da aba de notificações )</string>
    <string name="new_card_submit">Solicitar</string>
    <string name="qr_code_title">Qr Code</string>
    <string name="settings_account">Perfil</string>
    <string name="settings_messages">Recados</string>
    <string name="account_email">E-mail</string>
    <string name="go_back">Voltar</string>
    <string name="account_edit_info">Editar Informações</string>
    <string name="new_password_title">Redefinir Senha</string>
    <string name="settings_title">Configurações</string>
    <string name="old_password_hint">Senha antiga</string>
    <string name="new_password_hint">Nova senha</string>
    <string name="repeat_new_password_hint">Repetir Nova Senha</string>
    <string name="new_password_submit">Salvar\n</string>
    <string name="settings_new_password">Redefinir senha</string>
    <string name="settings_theme">Modo escuro</string>
    <string name="settings_support">Atendimento</string>
    <string name="settings_new_card">Solicitar nova carteirinha física</string>
    <string name="settings_leave">Sair</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_account_title">Editar Conta</string>
    <string name="account_title">Informações da Conta</string>
    <string name="support_subject_hint">Assunto</string>
    <string name="support_content_hint">Conteúdo</string>
    <string name="support_attach">Anexos</string>
    <string name="support_submit">Enviar</string>
    <string name="edit_account_submit">Salvar</string>
    <string name="qr_code_description">Qr Code</string>
    <string name="home_card_full_name">Nome: %1$s</string>
    <string name="home_card_cpf">CPF: %1$s</string>
    <string name="home_card_birth_date">Data de Nascimento: %1$s</string>
    <string name="home_card_course">Curso: %1$s</string>
    <string name="account_birth_date">Data de Nascimento</string>
    <string name="account_registration">Matrícula</string>
    <string name="account_cpf">CPF</string>
    <string name="account_level">Nível</string>
    <string name="account_course">Curso</string>
    <string name="account_class">Turma</string>
    <string name="support_title">Suporte</string>
    <string name="qr_code_denied_access">Acesso negado.</string>
    <string name="forgot_password_title">Confirmar E-mail</string>
    <string name="forgot_password_hint">E-mail</string>
    <string name="forgot_password_submit">Solicitar</string>
</resources>