<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".BaseActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".AccountFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include
                android:id="@+id/header"
                layout="@layout/header" />

            <TextView
                android:id="@+id/header_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/account_title"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/header" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/email_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/account_email"
                android:textColor="?android:textColorPrimary"
                android:textSize="@dimen/text_label_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?android:textColorPrimary"
                android:textSize="@dimen/small_text_v2" />

            <TextView
                android:id="@+id/birth_date_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/account_birth_date"
                android:textColor="?android:textColorPrimary"
                android:textSize="@dimen/text_label_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/birth_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?android:textColorPrimary"
                android:textSize="@dimen/small_text_v2" />

            <TextView
                android:id="@+id/registration_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/account_registration"
                android:textColor="?android:textColorPrimary"
                android:textSize="@dimen/text_label_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/registration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?android:textColorPrimary"
                android:textSize="@dimen/small_text_v2" />

            <TextView
                android:id="@+id/cpf_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/account_cpf"
                android:textColor="?android:textColorPrimary"
                android:textSize="@dimen/text_label_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cpf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?android:textColorPrimary"
                android:textSize="@dimen/small_text_v2" />

            <TextView
                android:id="@+id/level_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/account_level"
                android:textColor="?android:textColorPrimary"
                android:textSize="@dimen/text_label_size"
                android:textStyle="bold"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?android:textColorPrimary"
                android:textSize="@dimen/small_text_v2" />

            <TextView
                android:id="@+id/course_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/account_course"
                android:textColor="?android:textColorPrimary"
                android:textSize="@dimen/text_label_size"
                android:textStyle="bold"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/course"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?android:textColorPrimary"
                android:textSize="@dimen/small_text_v2" />

            <TextView
                android:id="@+id/c_class_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/account_class"
                android:textColor="?android:textColorPrimary"
                android:textSize="@dimen/text_label_size"
                android:textStyle="bold"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/c_class"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?android:textColorPrimary"
                android:textSize="@dimen/small_text_v2" />

            <LinearLayout
                android:id="@+id/go_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="16dp"
                android:onClick="settingsFragment"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/arrow_width"
                    android:layout_height="@dimen/arrow_height"
                    android:rotation="180"
                    android:src="@drawable/arrow_icon" />

                <TextView
                    android:id="@+id/go_back_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/go_back"
                    android:textAlignment="center"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="@dimen/go_back_text_size"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>