<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base_blue"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:layout_marginTop="48dp"
            android:src="@drawable/senai_logo"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_title"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="50dp"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                android:textAlignment="center"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/username_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_cpf"
                android:textColor="@color/white"
                android:textSize="@dimen/input_label_size"
                android:layout_marginTop="12dp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/input_background"
                android:inputType="text"
                android:padding="@dimen/input_padding"
                android:textColorHint="@color/text_hint"
                android:textColor="?android:textColorPrimary" />

            <TextView
                android:id="@+id/password_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_password"
                android:textColor="@color/white"
                android:textSize="@dimen/input_label_size"
                android:layout_marginTop="12dp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:padding="@dimen/input_padding"
                android:textColor="?android:textColorPrimary"
                android:layout_marginTop="8dp"
                android:textColorHint="@color/text_hint"
                android:background="@drawable/input_background"/>

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:backgroundTint="@android:color/white"
                android:textColor="@color/base_blue"
                android:text="@string/login_submit"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_forgot_password"
                android:layout_marginTop="16dp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/test"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:layout_marginTop="12dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fingerprint"
                android:src="@drawable/fingerprint"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/loading_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">
        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparent_black">
        </View>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_gravity="center"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>